* Bug #12247 fixed - Fix a typo in some error messages.
Change-Id: I40242c69c96a6fbbf8f3b14107336dc5d4ffe3ae

--- a/scilab/modules/elementary_functions/locales/elementary_functions.pot
+++ b/scilab/modules/elementary_functions/locales/elementary_functions.pot
@@ -561,7 +561,7 @@ msgstr ""
 #
 # File: macros/calerf.sci, line: 42
 #, c-format
-msgid "%s: Wrong value for argument %d: 0, 1 or 2 expected.\n"
+msgid "%s: Wrong value for argument #%d: 0, 1 or 2 expected.\n"
 msgstr ""
 
 #
