--- a/scilab/modules/output_stream/locales/ca_ES.po
+++ b/scilab/modules/output_stream/locales/ca_ES.po
@@ -661,7 +661,7 @@ msgstr ""
 "Informeu d'aquest error:\n"
 
 #, c-format
-msgid "Wrong value for argument %d.\n"
+msgid "Wrong value for argument #%d.\n"
 msgstr "L'argument %d té un valor incorrecte.\n"
 
 #, c-format
@@ -950,17 +950,17 @@ msgid "Function not defined for given argument type(s),\n"
 msgstr "La funció no està definida per a aquests tipus d'arguments,\n"
 
 #, c-format
-msgid "Wrong value for argument %d: the lu handle is no more valid.\n"
+msgid "Wrong value for argument #%d: the lu handle is no more valid.\n"
 msgstr ""
 "L'argument %d té un valor incorrecte: Ja no és vàlid el tractament lu.\n"
 
 #, c-format
-msgid "Wrong value for argument %d: Valid variable name expected.\n"
+msgid "Wrong value for argument #%d: Valid variable name expected.\n"
 msgstr ""
 "L'argument %d té un valor incorrecte: Ha de ser un nom de variable vàlid.\n"
 
 #, c-format
-msgid "Wrong value for argument %d: Empty string expected.\n"
+msgid "Wrong value for argument #%d: Empty string expected.\n"
 msgstr ""
 "L'argument %d té un valor incorrecte: Ha de ser una cadena de text buida.\n"
 
@@ -1015,7 +1015,7 @@ msgstr ""
 "Error d'escriptura al fitxer: el disc és ple o s'ha esborrat el fitxer.\n"
 
 #, c-format
-msgid "Wrong value for argument %d: Must not contain NaN or Inf.\n"
+msgid "Wrong value for argument #%d: Must not contain NaN or Inf.\n"
 msgstr "L'argument %d té un valor incorrecte: No pot contenir NaN ni Inf.\n"
 
 #, c-format
@@ -1037,14 +1037,14 @@ msgstr ""
 
 #, c-format
 msgid ""
-"Wrong value for argument %d: eigenvalues must have negative real parts.\n"
+"Wrong value for argument #%d: eigenvalues must have negative real parts.\n"
 msgstr ""
 "L'argument %d té un valor incorrecte: Els valors propis han de tenir part "
 "real negativa.\n"
 
 #, c-format
 msgid ""
-"Wrong value for argument %d: eigenvalues modulus must be less than one.\n"
+"Wrong value for argument #%d: eigenvalues modulus must be less than one.\n"
 msgstr ""
 "L'argument %d té un valor incorrecte: El mòdul dels valors propis ha de ser "
 "com a mínim 1.\n"
